[247] ANTLR description - corrections

--- a/thesis/tex/bibliography.tex
+++ b/thesis/tex/bibliography.tex
@@ -2,8 +2,10 @@
 \begin{thebibliography}{1}
 
 
-\bibitem{sop}A.~Tanenbaum. \emph{Operating Systems Design and Implementation}.
-Prentice Hall, 2006.
+\bibitem{compilers}A. Aho, R. Sethi, J. Ullman. \emph{Kompilatory. Reguły, metody i narzędzia}.
+WNT, 2001.
+\bibitem{antlr}T.~Parr. \emph{The Definitive ANTLR Reference. Building Domain-Specific Languages}. 
+The Pragmatic Bookshelf, 2007.
 
 
 \end{thebibliography}
