[247] specification.tex encoding fixed

--- a/thesis/tex/specification.tex
+++ b/thesis/tex/specification.tex
@@ -1,80 +1,81 @@
-\chapter{Specyfikacja wymagañ}
+\chapter{Specyfikacja wymagaÅ„}
 \section{Wymagania funkcjonalne}
-\subsection{Kolorowanie sk³adni}
+\subsection{Kolorowanie skÅ‚adni}
 \begin{enumerate}
-\item U¿ytkownik wpisuje ci¹g znaków do edytora tekstu.
-\item Edytor rozpoznaje typ ci¹gu znaków.
+\item UÅ¼ytkownik wpisuje ciÄ…g znakÃ³w do edytora tekstu.
+\item Edytor rozpoznaje typ ciÄ…gu znakÃ³w.
 \item Tekst zostaje pokolorowany na odpowiedni kolor.
 \end{enumerate}
 Rozszerzenia
 \begin{enumerate}
-\item[2.a] Ci¹g znaków to komentarz.
-\item[2.b] Ci¹g znaków nie jest komentarzem.
-\item[2.b.1] Nastêpuje g³êbsza analiza znaków.
+\item[2.a] CiÄ…g znakÃ³w to komentarz.
+\item[2.b] CiÄ…g znakÃ³w nie jest komentarzem.
+\item[2.b.1] NastÄ™puje gÅ‚Ä™bsza analiza znakÃ³w.
 \end{enumerate}
-\subsection{Wykrywanie b³êdów}
+\subsection{Wykrywanie bÅ‚Ä™dÃ³w}
 \begin{enumerate}
-\item U¿ytkownik wpisuje kod.
+\item UÅ¼ytkownik wpisuje kod.
 \item Edytor pobiera aktualny stan dokumentu.
-\item System sprawdza kod pod k¹tem gramatycznym i semantycznym.
+\item System sprawdza kod pod kÄ…tem gramatycznym i semantycznym.
 \end{enumerate}
 Rozszerzenia
 \begin{enumerate}
-\item[3.a] System wykrywa b³¹d. 
-\item[3.a.1] W domyœlnym oknie b³êdów pojawia siê informacja o b³êdzie i miejscu.
-\item[3.a.2] W oknie edytora b³¹d zostaje podkreœlony.
-\item[3.b] System nie wykrywa b³êdu.
+\item[3.a] System wykrywa bÅ‚Ä…d. 
+\item[3.a.1] W domyÅ›lnym oknie bÅ‚Ä™dÃ³w pojawia siÄ™ informacja o bÅ‚Ä™dzie i miejscu.
+\item[3.a.2] W oknie edytora bÅ‚Ä…d zostaje podkreÅ›lony.
+\item[3.b] System nie wykrywa bÅ‚Ä™du.
 \end{enumerate}
-\subsection{Podpowiadanie sk³adni}
+\subsection{Podpowiadanie skÅ‚adni}
 \begin{enumerate}
-\item U¿ytkownik podaje ci¹g znaków lub korzysta z okna podpowiedzi.
-\item Edytor pobiera ostatni¹ sekwencjê znaków przed kursorem.
-\item Ci¹g znaków poddany jest analizie.
-\item Edytor wyœwietla listê w oknie podpowiedzi.
-\item U¿ytkownik zaznacza wybran¹ podpowiedŸ.
+\item UÅ¼ytkownik podaje ciÄ…g znakÃ³w lub korzysta z okna podpowiedzi.
+\item Edytor pobiera ostatniÄ… sekwencjÄ™ znakÃ³w przed kursorem.
+\item CiÄ…g znakÃ³w poddany jest analizie.
+\item Edytor wyÅ›wietla listÄ™ w oknie podpowiedzi.
+\item UÅ¼ytkownik zaznacza wybranÄ… podpowiedÅº.
 \item Edytor wpisuje tekst za kursorem.
 \end{enumerate}
 Rozszerzenia
 \begin{enumerate}
-\item[3.a] System zwraca listê propozycji zaczynaj¹cych siê na podany ci¹g znaków.
-\item[3.b] System nie znajduje podpowiedzi i zwraca pust¹ listê.
+\item[3.a] System zwraca listÄ™ propozycji zaczynajÄ…cych siÄ™ na podany ciÄ…g znakÃ³w.
+\item[3.b] System nie znajduje podpowiedzi i zwraca pustÄ… listÄ™.
 \end{enumerate}
 \subsection{Tworzenie nowego projektu}
 \begin{enumerate}
-\item U¿ytkownik otwiera menu kontekstowe.
-\item U¿ytkownik wybiera opcjê nowy.
-\item U¿ytkownik uruchamia kreatora projektu PDDL.
-\item U¿ytkownik proszony jest o podanie nazwy projektu
+\item UÅ¼ytkownik otwiera menu kontekstowe.
+\item UÅ¼ytkownik wybiera opcjÄ™ nowy.
+\item UÅ¼ytkownik uruchamia kreatora projektu PDDL.
+\item UÅ¼ytkownik proszony jest o podanie nazwy projektu
 \item Kreator tworzy nowy, pusty projekt.
 \end{enumerate}
 Rozszerzenia
 \begin{enumerate}
-\item[3.a] U¿ytkownik uruchamia kreatora tworzenia nowego projektu. 
-\item[3.a.1] U¿ytkownik wybiera projekt PDDL z listy propozycji.
+\item[3.a] UÅ¼ytkownik uruchamia kreatora tworzenia nowego projektu. 
+\item[3.a.1] UÅ¼ytkownik wybiera projekt PDDL z listy propozycji.
 \end{enumerate}
 \subsection{Tworzenie nowego pliku PDDL}
 \begin{enumerate}
-\item U¿ytkownik otwiera menu kontekstowe.
-\item U¿ytkownik wybiera opcjê nowy.
-\item U¿ytkownik uruchamia kreatora tworzenia pliku PDDL.
-\item U¿ytkownik proszony jest o podanie nazwy pliku.
-\item U¿ytkownik wybiera przeznaczenie pliku.
+\item UÅ¼ytkownik otwiera menu kontekstowe.
+\item UÅ¼ytkownik wybiera opcjÄ™ nowy.
+\item UÅ¼ytkownik uruchamia kreatora tworzenia pliku PDDL.
+\item UÅ¼ytkownik proszony jest o podanie nazwy pliku.
+\item UÅ¼ytkownik wybiera przeznaczenie pliku.
 \item Kreator tworzy nowy plik PDDL z szablonem zgodnym z przeznaczeniem pliku.
 \end{enumerate}
 Rozszerzenia
 \begin{enumerate}
-\item[3.a] U¿ytkownik uruchamia kreatora tworzenia niestandardowego pliku.
-\item[3.a.1] U¿ytkownik wybiera typ pliku PDDL z listy propozycji.
+\item[3.a] UÅ¼ytkownik uruchamia kreatora tworzenia niestandardowego pliku.
+\item[3.a.1] UÅ¼ytkownik wybiera typ pliku PDDL z listy propozycji.
 \end{enumerate}
 \subsection{Repozytorium kodu}
 \begin{enumerate}
-\item U¿ytkownik otwiera okno instalacji dodatkowego oprogramowania Eclipse.
-\item U¿ytkownik wpisuje adres repozytorium.
-\item System pokazuje listê dostêpnych dodatków z podanego Ÿród³a.
-\item U¿ytkownik zaznacza wtyczkê GUI4PDDL do instalacji.
-\item System rozpoczyna pobieranie oraz instalacjê.
-\item U¿ytkownik uruchamia ponownie program Eclipse by ukoñczyæ instalacjê.
-\item Po otwarciu programu ponownie wtyczka widoczna jest na liœcie aktywnych dodatków Eclipse.
+\item UÅ¼ytkownik otwiera okno instalacji dodatkowego oprogramowania Eclipse.
+\item UÅ¼ytkownik wpisuje adres repozytorium.
+\item System pokazuje listÄ™ dostÄ™pnych dodatkÃ³w z podanego ÅºrÃ³dÅ‚a.
+\item UÅ¼ytkownik zaznacza wtyczkÄ™ GUI4PDDL do instalacji.
+\item System rozpoczyna pobieranie oraz instalacjÄ™.
+\item UÅ¼ytkownik uruchamia ponownie program Eclipse by ukoÅ„czyÄ‡ instalacjÄ™.
+\item Po otwarciu programu ponownie wtyczka widoczna jest na liÅ›cie aktywnych dodatkÃ³w Eclipse.
 \end{enumerate}
 \section{Wymagania pozafunkcjonalne}
+
 
