--- a/thesis/tex/specification.tex
+++ b/thesis/tex/specification.tex
@@ -13,6 +13,7 @@ Rozszerzenia
 \item[2.b.1] Następuje głębsza analiza znaków.
 \end{enumerate}
 \subsection{Wykrywanie błędów}
+\label{reqErrorDetection}
 \begin{enumerate}
 \item Użytkownik wpisuje kod.
 \item Edytor pobiera aktualny stan dokumentu.
@@ -26,6 +27,7 @@ Rozszerzenia
 \item[3.b] System nie wykrywa błędu.
 \end{enumerate}
 \subsection{Podpowiadanie składni}
+\label{reqAutocompletion}
 \begin{enumerate}
 \item Użytkownik podaje ciąg znaków lub korzysta z okna podpowiedzi.
 \item Edytor pobiera ostatnią sekwencję znaków przed kursorem.
