[247] Added lexer and parser description

--- a/thesis/tex/bibliography.tex
+++ b/thesis/tex/bibliography.tex
@@ -4,6 +4,8 @@
 
 \bibitem{compilers}A. Aho, R. Sethi, J. Ullman. \emph{Kompilatory. Reguły, metody i narzędzia}.
 WNT, 2001.
+\bibitem{pddl}M. Ghallab et al. \emph{PDDL -- The Planning Domain Definition Language. Version 1.2}.
+AIPS Conference, 1998.
 \bibitem{antlr}T.~Parr. \emph{The Definitive ANTLR Reference. Building Domain-Specific Languages}. 
 The Pragmatic Bookshelf, 2007.
 
