--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -1,8 +1,11 @@
 \documentclass[11pt,a4paper,polish,thesis]{dcsbook}
 
 \usepackage{babel}
+\usepackage{float}
 \setcounter{secnumdepth}{4}
 \setcounter{tocdepth}{3}
+
+\newfloat{Code}{htbp}{myc}
 
 \begin{document}
 
